Добавил vercel.json для маршрутизации

--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
         <!-- Блок с кнопками-ссылками -->
         <div class="links">
             <!-- Кнопка для начала игры -->
-            <a href="/game" class="btn btn-primary">🎮 Играть в викторину</a>
-            <!-- Кнопка для перехода в панель администратора -->
-            <a href="/admin" class="btn btn-secondary">⚙️ Админ - панель</a>
+            <a href="/game.html" class="btn btn-primary">🎮 Играть в викторину</a>
+            <a href="/admin.html" class="btn btn-secondary">⚙️ Админ - панель</a>
         </div>
     </div>
 </body>
