Add vercel.json to fix routing

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         /* Стили из предыдущего сообщения */
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
         body {
-            background: linear-gradient(135deg, #415f54, #2d443c);
+            background: linear-gradient(135deg, #798e87, #858b89);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -27,13 +27,13 @@
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             border: 1px solid rgba(255,255,255,0.2);
         }
-        .error-code { font-size: 120px; font-weight: bold; color: #ff6b6b; margin-bottom: 20px; }
+        .error-code { font-size: 120px; font-weight: bold; color: #ffffff; margin-bottom: 20px; }
         .error-message { font-size: 1.8em; margin-bottom: 20px; }
         .home-btn {
             display: inline-block;
             padding: 15px 35px;
-            background: linear-gradient(to right, #416743, #45a049);
-            color: white;
+            background: linear-gradient(to right, #9a9a9a, #7f9380);
+            color: rgb(53, 53, 53);
             text-decoration: none;
             border-radius: 25px;
             font-weight: bold;
@@ -47,8 +47,7 @@
 <body>
     <div class="container">
         <div class="error-code">404</div>
-        <h1 class="error-message">Ой! Такой страницы нет в нашей викторине.</h1>
-        <p>Возможно, вы ошиблись в адресе или страница была перемещена.</p>
+        <h1 class="error-message">Ой! Такой страницы нет.</h1>
         <a href="/" class="home-btn">Вернуться на главную</a>
     </div>
 </body>
