--- a/admin.html
+++ b/admin.html
@@ -151,7 +151,7 @@
                         <button id="reload-data" class="action-btn">
                             <i class="fas fa-sync-alt"></i> Обновить данные
                         </button>
-                        <a href="/game" target="_blank" class="action-btn">
+                        <a href="/game.html" target="_blank" class="action-btn">
                             <i class="fas fa-gamepad"></i> Открыть игру
                         </a>
                     </div>
