--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         /* Стили из предыдущего сообщения */
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
         body {
-            background: linear-gradient(135deg, #798e87, #858b89);
+            background: linear-gradient(135deg, #cbdbd6, #858b89);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -18,7 +18,7 @@
             text-align: center;
         }
         .container {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(25, 64, 21, 0.7);
             backdrop-filter: blur(10px);
             border-radius: 20px;
             padding: 50px;
