--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         /* Стили из предыдущего сообщения */
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
         body {
-            background: linear-gradient(135deg, #ffffff, #858b89);
+            background: linear-gradient(135deg, #cbdbd6, #858b89);
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -18,7 +18,7 @@
             text-align: center;
         }
         .container {
-            background: rgba(25, 64, 21, 0.391);
+            background: rgba(25, 64, 21, 0.525);
             backdrop-filter: blur(10px);
             border-radius: 20px;
             padding: 50px;
@@ -33,7 +33,7 @@
             display: inline-block;
             padding: 15px 35px;
             background: linear-gradient(to right, #9a9a9a, #7f9380);
-            color: rgb(170, 167, 167);
+            color: rgb(255, 255, 255);
             text-decoration: none;
             border-radius: 25px;
             font-weight: bold;
